@@ -67,6 +67,7 @@
 - [DS-632] Batch Metadata Import needs to validate metadata fields specified in CSVs
 - [DS-646] Remove /bin scripts (replaced by 'dspace' command)
 - [DS-713] dspace.log only logs remoteAddr, needs extending to include X-Forwarded-For
+- [DS-735] Allow IPAuthentication to work with proxies (examine X-Forwarded-For header)
 
 (Graham Triggs)
 - [DS-698] Clear primary_bitstream_id references when deleting a bitstream
